--- a/PMQLCX/PMQLCX/App.config
+++ b/PMQLCX/PMQLCX/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add name ="connString" connectionString ="Data Source=.;Initial Catalog=DataTramXangDau;Integrated Security=True" providerName="providerName"/>
+  </connectionStrings>
 </configuration>
