--- a/PMQLCX/PMQLCX/App.config
+++ b/PMQLCX/PMQLCX/App.config
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name ="connString" connectionString ="Data Source=.;Initial Catalog=DataTramXangDau;Integrated Security=True" providerName="providerName"/>
+    <add name="connString" connectionString="Data Source=.;Initial Catalog=DataTramXangDau;Integrated Security=True"
+      providerName="providerName" />
+    <add name="PMQLCX.Properties.Settings.DataTramXangDauConnectionString"
+      connectionString="Data Source=.;Initial Catalog=DataTramXangDau;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
